# ci-cd-django-docker

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: utils.py  views.py
core/templates/core/: index.html
mysite/: settings.py  urls.py
tests/: test_utils.py  test_views.py
